# gml-lab

./: .clang-format  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
.claude/: setting.json
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yaml  claude-review.yaml  pr_check.yaml  review.yaml  weekly.yaml
configs/: imagenet_lmdb.py  mapping.py
csrc/: fused_quant_conv.cu  kernel.cu  kernel.hpp  quant_add.cu  quant_gelu.cu  quant_linear.cu  quant_lut.cu  quant_relu.cu  relu.cu  square.cu
docker/: Dockerfile
docker/install/: requirements.txt
docs/adr/: 001-normalize-fx-graph-before-quantization.md  002-abstract-base-class-for-quantized-modules.md  003-mixed-precision-quantization-for-tensor-cores.md
examples/: gml_example.py  utils.py
scripts/: data_conversion.py
src/gml_lab/: config_builder.py  dataset.py  evaluation.py  model_builder.py  model_loader.py  utils.py
src/gml_lab/kernel/: __init__.py  gml_q_add.py  gml_q_conv.py  gml_q_relu.py
src/gml_lab/kernel_class/: __init__.py  gml_fused_q_conv.py  gml_q_add.py  gml_q_fc.py  gml_q_lut.py  gml_q_relu.py  gml_quant_base.py  utils.py
src/gml_lab/lowering/: lower_to_gml.py
src/gml_lab/lowering/passes/: __init__.py  lower_add.py  lower_conv.py  lower_linear.py  lower_lut_act.py  lower_relu.py  utils.py
src/gml_lab/modeling/: __init__.py  model_builder.py  utils.py
src/gml_lab/nn/: fused_modules.py  modules.py
src/gml_lab/quantizer/: __init__.py  backend_mapping.py  calibration.py  gml_backend_config.py  gml_convert_fx.py  gml_prepare_fx.py  gml_qconfig_mapping.py
src/gml_lab/quantizer/passes/: __init__.py  fuse_add_relu.py  remove_identity.py  skip_quant_non_aligned_modules.py  unify_add.py  unify_conv.py  unify_gelu.py  unify_linear.py  unify_relu.py  utils.py
tests/: mock_test.py
tests/dev/: kernel_call_test.py  lower_pass_test.py  quant_kernel_call_test.py  test_kernel_call.py
tests/kernel/: add_test.py  conv_test.py  gelu_test.py  linear_test.py  relu_test.py  square_test.py
tests/models/: __init__.py  activation.py  add.py  conv.py  linear.py  relu.py
tests/passes/: add_test.py  conv_test.py  gelu_test.py  linear_test.py  relu_test.py  remove_identity_test.py
tests/quant_acc/: add_relu_test.py  conv_test.py  gelu_test.py  linear_test.py  relu_test.py
tests/quantizer/: poc_quantizer_test.py  utils.py
tests/tools/: build_config_test.py  profilet_test.py
tests/unify_pass/: add_test.py  relu_test.py
tests/utils/: node_info.py  test_logger.py  test_utils.py
tools/: layer_by_layer_analysis.py  profiler.py  public_model_trace.py  visualize_graph.py
