[project]
name = "gml-lab"
version = "0.1.0"
description = "Green-ML Optimization Lab: Vertical optimization pipeline for mmpretrain models"
readme = "README.md"
requires-python = ">=3.10"

# Build Config
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gml_lab*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",
    "COM812",
    "D100",
    "D104",
    "D107",
    "D203",
    "D213",
    "DTZ005",
    "ERA001",
    "G004",
    "NPY002",
    "PTH103",
    "PTH110",
    "PTH120",
    "PTH123",
    "S101",
    "S603",
    "SIM105",
    "T201",
    "TD002",
    "TD003",
    "TRY003",
    "TRY400",
    "RUF003"
]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D101",
    "D103"
]
"experiments/*" = ["ALL"]

[tool.pytest.ini_options]
markers = [
    "gpu: Tests that require a real GPU (skipped on CI)",
    "heavy: Tests that take a long time (skipped on PRs)",
]
testpaths = ["tests"]
