[project]
name = "gml-lab"
version = "0.1.0"
description = "Green-ML Optimization Lab: Vertical optimization pipeline for mmpretrain models"
readme = "README.md"
requires-python = ">=3.10"

# Build Config
[build-system]
requires = ["setuptools>=64.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gml_lab*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",
    "COM812",
    "D100",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "DTZ005",
    "ERA001",
    "FIX002",
    "G004",
    "N812",
    "NPY002",
    "PERF203",
    "PERF402",
    "PGH003",
    "PTH103",
    "PTH110",
    "PTH120",
    "PTH123",
    "S101",
    "S603",
    "SIM105",
    "SLF001",
    "T201",
    "TD002",
    "TD003",
    "TRY003",
    "TRY400",
    "RUF003",
    "S301"
]
[tool.ruff.lint.isort]
sections = { "custom-kernels" = ["gml_lab_custom_ops"] }
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
    "custom-kernels"
]
[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D101",
    "D102",
    "D103",
    "N812",
]

"src/gml_lab/kernel_class/*" = [
    "D101",
    "D102",
    "D103",
    "N812",
]
"experiments/*" = ["ALL"]
"configs/*" = [
    "C408"
]
"work_dirs/*" = ["ALL"]

[tool.pytest.ini_options]
markers = [
    "gpu: Tests that require a real GPU (skipped on CI)",
    "heavy: Tests that take a long time (skipped on PRs)",
]
testpaths = ["tests"]
